# EKO_LocalAnalysis

./: .gitignore  LICENSE  README.md  index.html  latest.json  package-lock.json  package.json  publish.ps1  vite.config.ts
browser-extension/: README.md  manifest.json  popup.html
browser-extension/src/: background.js  content.css  content.js  extension-utils.js  extension-utils.test.ts  popup.css  popup.js
docs/superpowers/plans/: 2026-07-17-materials-library.md
docs/superpowers/specs/: 2026-07-16-materials-library-design.md
eagle-plugin/: README.md  index.html  manifest.json  plugin.js  plugin.mjs
eagle-plugin/src/: eagle-utils.mjs  eagle-utils.test.ts  plugin.css
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  bridge.rs  exporter.rs  importer.rs  lib.rs  main.rs  materials.rs  storage.rs
src/assets/: main.css
src/components/: GlassCard.vue  RadarChart.vue  SideBar.vue  TitleBar.vue  Toast.vue
src/components/materials/: AnalysisBreakdown.test.ts  AnalysisBreakdown.vue  MaterialAssetCard.vue  (+5 more)
src/lib/: api.ts  materialPacks.test.ts  materialPacks.ts  materials.test.ts  materials.ts  model-prompts.ts  prompt-spec.ts  utils.ts
src/router/: index.ts
src/stores/: analysis.test.ts  analysis.ts  gallery.ts  materials.test.ts  materials.ts  settings.ts  update.test.ts  update.ts
src/test/: setup.ts
src/views/: BatchView.vue  GalleryView.test.ts  GalleryView.vue  MaterialsView.test.ts  MaterialsView.vue  SettingsView.vue  SingleView.vue
